# predicao

./: .env.exemple  .gitignore  CONTEXTO_PROJETO.md  README.md  pyproject.toml  renomear_2023.py  requirements.txt
docs/: ABLACAO_RELATORIO.md  CONTEXTO_PROJETO.md  REFACTORING_ABLACAO.md
notebooks/: 00_diagnostico.ipynb  01_inspecao.ipynb  02_eda.ipynb  03_features.ipynb  04_modelagem_anomalia.ipynb  05_modelagem_supervisionada.ipynb  05b_modelagem_independente.ipynb  05c_analise_ablacao_knn.ipynb  Untitled.ipynb
notebooks/html/: 02_eda.html  05b_modelagem_independente.html
predicao.egg-info/: PKG-INFO  SOURCES.txt
reports/: shap_top20.json
scripts/: normalize_kernels.py
src/: __init__.py  ablacao.py  anomaly.py  config.py  consolidacao.py  explicabilidade.py  features.py  knn_melhorado.py  run_pipeline.py  scripts.py  tratamento.py
