[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predicao"
version = "0.1.0"
description = "Detecção de anomalias em licitações públicas"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]